
* Added utility methods for converting a Windows security identifier (SID)
  between a binary format and a slightly more readable string format.
  http://msdn.microsoft.com/en-us/library/aa379571%28VS.85%29.aspx
  (LDAP-187)

* Added authentication methods that provide a possible authentication
  exception through an AuthenticationErrorCallback. (LDAP-192)

* DefaultDirObjectFactory calls a Java5 version of the IllegalArgumentException
  constructor. (LDAP 196).

* DirContextAdapter JavaDoc now states clearly that several methods are not
  implemented on purpose. (LDAP-208)

* Class-level JavaDoc for OrFilter no longer uses AndFilter in sample code. (LDAP-217)

* Upgraded Spring to 2.5.6.SEC02 and 3.0.3.RELEASE. (LDAP-210)

* Upgraded Spring to 2.5.6.SEC01. (LDAP-194)

Changes in version 1.3.0 (Jan 2009)
-------------------------------------------
* Added methods for simple LDAP 'bind' authentication in LdapOperations and
  SimpleLdapOperations. The methods will perform a search given a supplied
  filter, call ContextSource#getContext(dn, password), and optionally callback
  to a supplied instance to perform an LDAP operation on the context.
 
* Re-used the same fix for LDAP-109 and LDAP-50 that was used in
  DefaultDirObjectFactory to secure the DirContextAdapter constructors from
  invalid CompositeNames.

* Made sure DirContextOperations#addAttributeValue(String, Object) does not add
  any duplicate values per default; added alternate method:
  DirContextOperations#addAttributeValue(String, Object, boolean) to enable
  behavior other than the default (i.e. allowing duplicates).

* Made sure that DirContextAdapter#setDn() throws exception if in update mode
  (The value is not set anyway, and this was previously silently ignored).
  
* Improved more search methods that take handlers so that they will work
  with handlers that use ContextMappers, e.g. ContextMapperCallbackHandler.
  (LDAP-162)
